--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "resend": "^3.2.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
