--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "flag-icons": "^7.2.1",
     "negotiator": "^0.6.3",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.15",
@@ -31,6 +32,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.1",
     "@types/negotiator": "^0.6.3",
     "@types/react": "18.2.21",
