--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "flag-icons": "^7.2.1",
+    "lucide-react": "^0.365.0",
     "negotiator": "^0.6.3",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.15",
@@ -26,7 +29,9 @@
     "react-icons": "^5.0.1",
     "react-use": "^17.5.0",
     "resend": "^3.2.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
